# architext-ai

./: *terminal*  .#*terminal*  .#README.md  .#app.py  .gitignore  MANIFEST.in  README.md  ai_service.py  app.py  demo-architext-ai.webm  directory-structure.txt  hotkey_daemon.py  pyproject.toml  requirements.txt
architext_ai/: __init__.py  app.py  hotkey_daemon.py
