# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architext-ai"
version = "1.0.0"
authors = [
  { name="Adrian Rubio-Punal", email="adrian.rubio.punal@gmail.com" },
]
description = "Your blueprint for perfect writing - a minimalist desktop app that uses AI to rebuild and enhance your text"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ai", "text", "writing", "enhancement", "openai", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "Pillow",
    "pynput",
]

[project.urls]
Homepage = "https://github.com/adrirubio/architext-ai"
Repository = "https://github.com/adrirubio/architext-ai"
Issues = "https://github.com/adrirubio/architext-ai/issues"

[project.scripts]
architext = "architext_ai.app:main"
architext-hotkey = "architext_ai.hotkey_daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["architext_ai*"]
